--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Item List</title>
+    <title>Tripini</title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="bundle.js"></script>
   </head>
-  <body>
+  <body id="body">
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="app">
       <!-- This div is where our app will run -->
